# Logger

./: CMakeLists.txt  logger.cpp  logger.hpp  logger_defines.hpp  main.cpp  other_process.cpp  other_process.hpp
